--- a/css/mystic_new.css
+++ b/css/mystic_new.css
@@ -59,10 +59,10 @@ body {
 #mm-dropdown {
   color: var(--main-background-color);
 }
-#mm-dropdown .nav-item > .nav-link {
+#mm-dropdown .nav-item .nav-link {
   color: var(--main-background-color);
 }
-#mm-dropdown .nav-item > .nav-link:hover {
+#mm-dropdown .nav-item .nav-link:hover {
   color: var(--mm-text-color);
 }
 .location {
