--- a/css/app.css
+++ b/css/app.css
@@ -88,12 +88,6 @@
   margin: 0;
 }
 
-.lol {
-  width: 100%;
-}
-body {
-}
-
 .navbar-brand {
   width: 15rem;
 }
@@ -187,6 +181,15 @@ body {
 .images img {
   width: 100%;
   height: 100%;
+}
+
+.scale-img img {
+  border-radius: 0.4rem;
+  transition: transform 0.3s ease-in-out;
+}
+
+.scale-img img:hover {
+  transform: scale(1.05);
 }
 
 .row {
